@@ -10,6 +10,11 @@
 	(gnus-notifications): Use `gnus-notifications-id-to-msg' to map
 	notifications id to messages.
 
+2012-08-30  Kenichi Handa  <handa@gnu.org>
+
+	* qp.el (quoted-printable-decode-region): Decode multiple bytes at
+	once.
+
 2012-08-29  Julien Danjou  <julien@danjou.info>
 
 	* gnus-notifications.el: New file.
